# VUtils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/: utils.h
test/: CMakeLists.txt  utils.cpp
